# MH_Pipeline

./: .gitignore  Makefile  README.md  convert_faces.py  convert_faces.sh  convert_files.sh  convert_gaussianHaircut.sh  convert_hairstep.sh  gaussianHaircut.sh  hairstep.sh  nextFace.sh
GaussianHaircut/: .gitignore  environment.yml  install.sh  run.sh  run_1.sh
GaussianHaircut/HAAR/: environment.yml
GaussianHaircut/HAAR/src/utils/: export_for_unreal.py
GaussianHaircut/blender-3.6.13-linux-x64/: blender-thumbnailer  readme.html
GaussianHaircut/blender-3.6.13-linux-x64/3.6/scripts/addons/cycles/shader/: node_absorption_volume.oso  node_add_closure.oso  node_ambient_occlusion.oso  node_anisotropic_bsdf.oso  node_attribute.oso  node_background.oso  node_bevel.oso  node_blackbody.oso  node_brick_texture.oso  node_brightness.oso  node_bump.oso  node_camera.oso  node_checker_texture.oso  node_clamp.oso  node_combine_color.oso  node_combine_hsv.oso  node_combine_rgb.oso  node_combine_xyz.oso  node_convert_from_color.oso  node_convert_from_float.oso  node_convert_from_int.oso  node_convert_from_normal.oso  node_convert_from_point.oso  node_convert_from_vector.oso  node_diffuse_bsdf.oso  node_displacement.oso  node_emission.oso  node_environment_texture.oso  node_float_curve.oso  node_fresnel.oso  node_gamma.oso  node_geometry.oso  node_glass_bsdf.oso  node_glossy_bsdf.oso  node_gradient_texture.oso  node_hair_bsdf.oso  node_hair_info.oso  node_holdout.oso  node_hsv.oso  node_ies_light.oso  (+61 more)
GaussianHaircut/ext/openpose/: CMakeLists.txt
GaussianHaircut/src/preprocessing/: export_curves.py
HairStep/: convert_abc.py  run.sh
HairStep/results/real_imgs/depth_map/: Adrianne-Palicki-06_2880x1800.npy  Amy-Adams-10_1920x1440.npy  GUEST_fdaf1def-ce59-4cea-acda-230b4de4dbdd.npy  IMG_1008.npy  f_11403540.npy
HairStep/results/real_imgs/lmk/: Adrianne-Palicki-06_2880x1800.npy  Amy-Adams-10_1920x1440.npy  GUEST_fdaf1def-ce59-4cea-acda-230b4de4dbdd.npy  IMG_1008.npy  f_11403540.npy
HairStep/results/real_imgs/param/: Adrianne-Palicki-06_2880x1800.npy  Amy-Adams-10_1920x1440.npy  GUEST_fdaf1def-ce59-4cea-acda-230b4de4dbdd.npy  IMG_1008.npy  f_11403540.npy
HairStep/scripts/: img2hairstep.py  recon3D.py
NextFace/: .gitignore  environment.yml  optimConfig.ini  utils.py
Photogrammetry/FaceReconstructionThesis/: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
Photogrammetry/FaceReconstructionThesis/Application_OFRC/: CMakeLists.txt  main.cc
Photogrammetry/FaceReconstructionThesis/Application_OrbbecSDK/: CMakeLists.txt  main.cc  tools.cc  tools.h
Photogrammetry/FaceReconstructionThesis/Application_OrbbecSDK_WithoutIMU_ICP/: CMakeLists.txt  PointCloudConstruction.cc  PointCloudConstruction.h  main.cc
Photogrammetry/FaceReconstructionThesis/Application_OrbbecSDK_WithoutIMU_PnP/: CMakeLists.txt  PointCloudConstruction.cc  PointCloudConstruction.h  main.cc
Photogrammetry/FaceReconstructionThesis/Application_OrbbecSDK_WithoutIMU_PnP_Batched/: CMakeLists.txt  PointCloudConstruction.cc  PointCloudConstruction.h  main.cc
Photogrammetry/FaceReconstructionThesis/PointCloudRegistration/: CMakeLists.txt  main.cc
Photogrammetry/FaceReconstructionThesis/PointCloudRegistration_Python/: main.py  normalize.py
Photogrammetry/FaceReconstructionThesis/include/feather/: utils.h
Photogrammetry/FaceReconstructionThesis/lib/: .gitignore  CMakeLists.txt
Photogrammetry/FaceReconstructionThesis/lib/Open3D/: .gitignore
Photogrammetry/FaceReconstructionThesis/lib/Open3D/CMake/: Open3DTargets-debug.cmake  Open3DTargets-release.cmake  Open3DTargets.cmake
Photogrammetry/FaceReconstructionThesis/lib/Open3D/lib/: tbb12.lib
Photogrammetry/FaceReconstructionThesis/lib/Open3D/lib/debug/: tbb12_debug.lib
results/: .gitignore
results/00/: NextFace.glb
results/01/: NextFace.glb
results/02/: NextFace.glb
results/03/: NextFace.glb
results/04/: NextFace.glb
results/05/: HairNet_Hair.abc  NextFace.glb
results/07/: NextFace.glb
